--- a/log-collection-common/pom.xml
+++ b/log-collection-common/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.paupupu</groupId>
     <artifactId>log-collection-common</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
