--- a/log-collection-model/pom.xml
+++ b/log-collection-model/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>log-collction-model</artifactId>
+    <artifactId>log-collection-model</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -18,19 +18,11 @@
     </properties>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-web</artifactId>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>junit</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--        </dependency>-->
+
         <dependency>
             <groupId>com.papupupu</groupId>
             <artifactId>log-collection-common</artifactId>
