--- a/log-collection-consumer/src/main/resources/application.yml
+++ b/log-collection-consumer/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
       group-id: ${spring.application.name}-test
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    druid:
+      url: jdbc:mysql://localhost:3306/log-collection?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+      username: papupupu
+      password: pppp
+      driver-class-name: com.mysql.cj.jdbc.Driver
