--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,17 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<!--        <lombok.version>RELEASE</lombok.version>-->
-<!--        <junit.version>4.13.1</junit.version>-->
-<!--        <jackson.version>2.13.0</jackson.version>-->
+        <!--        <lombok.version>RELEASE</lombok.version>-->
+        <!--        <junit.version>4.13.1</junit.version>-->
+        <!--        <jackson.version>2.13.0</jackson.version>-->
         <kafka.version>2.6.6</kafka.version>
         <kafka.client.version>2.5.1</kafka.client.version>
         <common.io.version>2.11.0</common.io.version>
+        <mybatis-plus.version>3.4.1</mybatis-plus.version>
+        <mysql.version>8.0.30</mysql.version>
+        <mybatis-plus-generator.version>3.4.1</mybatis-plus-generator.version>
+<!--        <druid.version>1.1.14</druid.version>-->
+        <swagger.version>2.9.2</swagger.version>
     </properties>
 
 
@@ -64,6 +69,40 @@
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
                 <version>${kafka.client.version}</version>
+            </dependency>
+            <!--mybatis-plus 持久层-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <!--mysql-->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis-plus-generator.version}</version>
+            </dependency>
+            <!--阿里数据库连接池 -->
+<!--            <dependency>-->
+<!--                <groupId>com.alibaba</groupId>-->
+<!--                <artifactId>druid-spring-boot-starter</artifactId>-->
+<!--                <version>${druid.version}</version>-->
+<!--            </dependency>-->
+            <!--swagger接口插件  -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
             </dependency>
 
         </dependencies>
