--- a/log-collection-consumer/src/main/resources/application.yml
+++ b/log-collection-consumer/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    druid:
-      url: jdbc:mysql://localhost:3306/log-collection?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
-      username: papupupu
-      password: pppp
-      driver-class-name: com.mysql.cj.jdbc.Driver
+#    druid:
+    url: jdbc:mysql://localhost:3306/log-collection?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+    username: papupupu
+    password: pppp
+    driver-class-name: com.mysql.cj.jdbc.Driver
