--- a/log-collection-consumer/src/main/resources/application.yml
+++ b/log-collection-consumer/src/main/resources/application.yml
@@ -11,10 +11,17 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
+#  datasource:
+#    type: com.zaxxer.hikari.HikariDataSource
+##    druid:
+#    url: jdbc:mysql://localhost:3306/log-collection?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+#    username: papupupu
+#    password: pppp
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-#    druid:
-    url: jdbc:mysql://localhost:3306/log-collection?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
-    username: papupupu
-    password: pppp
+    url: jdbc:mysql://rm-uf6087x4566hm2xs86o.rwlb.rds.aliyuncs.com/log_collection?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    username: log_collection
+    password: log_collection=123
     driver-class-name: com.mysql.cj.jdbc.Driver
