--- a/log-collection-producer/pom.xml
+++ b/log-collection-producer/pom.xml
@@ -61,6 +61,18 @@
             <artifactId>commons-io</artifactId>
         </dependency>
 
+
+        <!--redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--common-pool-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
