增加配置采集文件以及采集方式功能

--- a/log-collection-producer/src/main/resources/application.yml
+++ b/log-collection-producer/src/main/resources/application.yml
@@ -31,4 +31,15 @@ spring:
           #
           max-wait: 100ms
 
+log:
+  collection:
+    paths:
+      - /Users/papu/IdeaProjects/logs/daily1.log
+      - /Users/papu/IdeaProjects/logs/daily1.log
+      - /Users/papu/IdeaProjects/logs/daily2.log
+
+    types:
+      - Full Monitoring
+      - Incremental Monitoring
+      - Full Monitoring
 
